[gd_scene load_steps=4 format=3 uid="uid://6mhmpqyv66et"]

[ext_resource type="Texture2D" uid="uid://cfclrbemeqx4g" path="res://assets/items/Weapons/javelin_3_new.png" id="1_p6fkl"]
[ext_resource type="Script" uid="uid://bsrt32dyjthqe" path="res://scenes/player/Attack/javelin.gd" id="1_wiclc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wiclc"]
size = Vector2(2.82843, 33.9411)

[node name="Javelin" type="Area2D"]
script = ExtResource("1_wiclc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_p6fkl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7.15256e-07, 9.53674e-07)
rotation = -0.785398
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_wiclc")
disabled = true

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="ChangeDirection" type="Timer" parent="."]
unique_name_in_owner = true

[node name="ResetPosTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="snd_attack" type="AudioStreamPlayer2D" parent="."]
